<resources>
    <string name="app_name">TgBot++ Client</string>
    <string name="app_desc">An Android client app for TgBot++ project</string>
    <string name="app_creator">Created by Royna</string>
    <string name="app_creation_date">2023.02.16</string>

    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">TgBot++ Client</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="ip_address_fmt">IP Address: %s</string>
    <string name="address_type_fmt">Address Type: %s</string>
    <string name="port_fmt">Port: %d</string>
    <string name="message_fmt">Message: %s</string>
    <string name="destination_chat_id_fmt">Destination Chat ID: %d</string>
    <string name="destination_chat_fmt">Destination Chat: %s (%d)</string>

    <string name="menu_home">Home</string>
    <string name="menu_send_text_to_chat">Send text to chat</string>
    <string name="menu_get_uptime">Get uptime</string>
    <string name="destination_chat">Destination Chat</string>
    <string name="chat_id">Chat ID</string>
    <string name="message_text">Message Text</string>
    <string name="text">Text</string>
    <string name="send_message">Send Message</string>
    <string name="current_config">Current Configuration</string>
    <string name="menu_commands">Commands</string>
    <string name="menu_upload_file">Upload file</string>
    <string name="menu_download_file">Download File</string>
    <string name="menu_chat_id_save">Save chat id</string>
    <string name="utilities">Utilities</string>
    <string name="get">Get</string>
    <string name="get_desc">Press the get button</string>
    <string name="get_wip">Getting…</string>
    <string name="select_file">Select File</string>
    <string name="select_folder">Select Folder</string>
    <string name="no_file_selected">No file selected</string>
    <string name="couldnt_open_file">Couldn\'t open destination file</string>
    <string name="choose_upload_options">Choose one of three upload options:</string>
    <string name="upload_option_1">Don\'t send file if it already exists on the remote</string>
    <string name="upload_option_2">Don\'t send file if it already exists and the checksum (sha256)
        is same on the remote</string>
    <string name="upload_option_3">Always send file</string>
    <string name="chat_name_to_save">Chat name to save</string>
    <string name="save">Save</string>
    <string name="clear_all">Clear All</string>
</resources>