<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.royna.tgbotclient.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_send_msg"
        android:name="com.royna.tgbotclient.ui.commands.sendmsg.TextToChatFragment"
        android:label="@string/menu_send_text_to_chat"
        tools:layout="@layout/fragment_send_message" />

    <fragment
        android:id="@+id/nav_uptime"
        android:name="com.royna.tgbotclient.ui.commands.uptime.UptimeFragment"
        android:label="@string/menu_get_uptime"
        tools:layout="@layout/fragment_uptime" />

    <fragment
        android:id="@+id/nav_upload"
        android:name="com.royna.tgbotclient.ui.commands.uploadfile.UploadFileFragment"
        android:label="@string/menu_upload_file"
        tools:layout="@layout/fragment_upload_file" />

    <fragment
        android:id="@+id/nav_util_datastore_chat"
        android:name="com.royna.tgbotclient.datastore.chat.ui.ChatDatastoreFragment"
        android:label="@string/menu_chat_id_save"
        tools:layout="@layout/fragment_datastore_chat" />
</navigation>